--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "start": "cross-env NODE_ENV=DEVELOPMENT webpack-dev-server --config webpack.dev.js",
     "build": "cross-env NODE_ENV=PRODUCTION webpack --config webpack.prod.js",
     "dev": "cross-env NODE_ENV=DEVELOPMENT webpack --config webpack.dev.js",
+    "clear": "rm -rf node_modules",
+    "reinstall": "rm -rf node_modules && yarn",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
