--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "lib": ["dom", "dom.iterable", "esnext", "ES2015"],
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "strict": false,
+    "strict": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "module": "esnext",
