--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@babel/runtime": "^7.16.3",
+    "@types/regenerator-runtime": "^0.13.1",
     "@typescript-eslint/eslint-plugin": "4.30.0",
     "@typescript-eslint/parser": "4.30.0",
     "babel-loader": "^8.2.3",
@@ -22,6 +23,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "2.4.5",
     "prettier": "^2.5.1",
+    "regenerator-runtime": "^0.13.9",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
