--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/regenerator-runtime": "^0.13.1",
     "@typescript-eslint/eslint-plugin": "4.30.0",
     "@typescript-eslint/parser": "4.30.0",
+    "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
@@ -20,10 +21,13 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
+    "html-webpack-link-type-plugin": "^1.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "2.4.5",
+    "mini-css-extract-plugin": "^2.5.3",
+    "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
+    "resolve-url-loader": "^5.0.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
