--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "html-webpack-link-type-plugin": "^1.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "node-sass": "^7.0.1",
     "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
     "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^12.4.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
@@ -44,5 +46,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/classnames": "^2.3.1"
+  }
 }
