--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "paths": {
       "@src/*": ["src/*"],
       "@react/*": ["react/*"],
-      "@router/*": ["router/*"]
+      "@router/*": ["router/*"],
+      "@api/*": ["api/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext", "ES2015"],
